--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+# Reason specific files
+/node_modules/
+/lib/*
+/bundledOutputs/
+/build/
+npm-debug.log
+.DS_Store
+.bsb.lock
+*.cmt
+
+# Ocaml files
 *.annot
 *.cmo
 *.cma
@@ -18,6 +29,3 @@ _build/
 # oasis generated files
 setup.data
 setup.log
-
-# Merlin configuring file for Vim and Emacs
-.merlin
